trino-on-k8s/metastore.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metastore
spec:
  ports:
  - port: 9083
  selector:
    app: metastore
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metastore
spec:
  selector:
    matchLabels:
      app: metastore
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: metastore
    spec:
      containers:
      - name: metastore
        image: hsdao/hivemetastore
        ports:
        - containerPort: 9083
        volumeMounts:
        - name: metastore-cfg-vol
          mountPath: /opt/hive-metastore/conf/metastore-site.xml
          subPath: metastore-site.xml
        command: ["/opt/hive-metastore/bin/start-metastore"]
        args: ["-p", "9083"]
        imagePullPolicy: Always
      volumes:
        - name: metastore-cfg-vol
          configMap:
            name: metastore-cfg
