trino-on-k8s/trino-ingress-jwt-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress-jwt
spec:
  rules:
    - host: trino.horizontalsystems.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino
                port:
                  number: 8080
